Implementação de importancia

--- a/sites.html
+++ b/sites.html
@@ -53,36 +53,39 @@
 
     <!-- Navbar -->
     <div id="div_navbar">
-        <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-">
+        <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
             <button class="d-none navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link scroll" href="./index.html"><i class="fas fa-arrow-left"></i><span
-                            class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="./index.html"><i class="fas fa-arrow-left"></i></a>
                     <a class="nav-item nav-link scroll" href="#informations">Informações</a>
                     <a class="nav-item nav-link scroll" href="#prices">Preços</a>
                     <a class="nav-item nav-link scroll" href="#importance">Importância</a>
-                    <a id="" class="nav-link" aria-disabled="true">Olá, sou Messias !</a>
+                    <a class="nav-item nav-link scroll" href="#experience">Experiência</a>
+                    <a id="namePresentation" class="nav-link" aria-disabled="true">Olá, sou Messias !</a>
                 </div>
             </div>
+        </nav>
+        <nav class="d-sm-none navbar navbar-expand-lg navbar-dark ">
+                <a class="text-secondary nav-item nav-link" href="./index.html"><i class="fas fa-arrow-left"></i></a>
         </nav>
     </div>
 
     <!-- Informations -->
-    <section id="informations" class="my-5 size-page">
+    <section id="informations" class="my-5">
 
         <div class="container col-12">
 
             <!-- Title -->
             <div class="col-12 text-center pt-5 pb-4">
-                <h2 class="text-site">Quer Ter O Seu Site ? </h2>
+                <h2 class="text-site">Quer ter o seu site ? </h2>
             </div>
 
             <!-- Content -->
-            <div class="col-sm-12 col-md-5 mx-auto bg-site pt-2 pb-5 px-4">
+            <div class="col-sm-12 col-md-5 mx-auto bg-site pt-2 pb-5 px-2">
                 <h4 class="text-center mt-2 mb-4">Desenvolvo :</h4>
                 <ul>
                     <li>Sites <strong>informativos</strong> ou para <strong>divulgações</strong>.</li>
@@ -109,7 +112,7 @@
     </section>
 
     <!-- Prices -->
-    <section id="prices" class="my-5 size-page">
+    <section id="prices" class="my-5 ">
 
         <div class="container col-12">
 
@@ -146,7 +149,7 @@
                                 <li>Domínio</li>
                             </ul>
                             </p>
-                            <a class="card-link text-success float-right href="index.html/#contact">Adquirir</a>
+                            <a class="card-link text-success float-right href=" index.html/#contact">Adquirir</a>
                         </div>
 
                     </div>
@@ -210,6 +213,69 @@
         </div>
 
     </section>
+
+    <!-- Importance -->
+    <section id="importance" class="my-5">
+
+        <div class="container col-12">
+
+            <!-- Title -->
+            <div class="col-12 text-center pt-5 pb-4">
+                <h2 class="text-site">Importância</h2>
+            </div>
+
+            <!-- Content -->
+            <div class="col-sm-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4   ">
+                <h4 class="text-center mt-2 mb-4">Porque devo ter um site ?</h4>
+                <p>Qualquer vinculação com <strong>mídias</strong>, <strong>redes sociais</strong> e
+                    <strong>internete</strong> são de extrema importância hoje em dia.
+                    Empresas de diferentes tamanhos já estão migrando para o meio digital e isso se intensificou durante
+                    a pandemia. Já as empresas recém-criadas iniciam sua jornada no meio digital. Pessoas autônomas
+                    querem divulgar o seu negócio - <strong> ninguém quer ficar
+                        para trás !</strong></p>
+            </div>
+
+            <!-- SVG -->
+            <div class="d-none row neon-site  py-5">
+                <a href="#interests" class="text-decoration-none mx-auto scroll"><i
+                        class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
+                    <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- Experience -->
+    <section id="importance" class="my-5">
+
+        <div class="container col-12">
+
+            <!-- Title -->
+            <div class="col-12 text-center pt-5 pb-4">
+                <h2 class="text-site">Experiência</h2>
+            </div>
+
+            <!-- Content -->
+            <div class="col-sm-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4   ">
+
+                <!-- Fazer 4 separações com 1 com eblema do FNN-->
+               <div>
+
+               </div>
+            </div>
+
+            <!-- SVG -->
+            <div class="d-none row neon-site  py-5">
+                <a href="#interests" class="text-decoration-none mx-auto scroll"><i
+                        class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
+                    <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
+            </div>
+
+        </div>
+
+    </section>
+
 </body>
 
 </html>
