Atualização de conteúdo e espaçamento

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </div>
 
       <!-- Content -->
-      <div class="col-sm-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-5">
+      <div class="col-sm-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4">
         <p>Olá, meu nome é Messias Nunesmaia, tenho 20 anos e sou Estudante de Engenharia de Software (4º Semestre).
           Sou bastante dedicado e aprendo rápido. Meus conhecimentos podem ser vistos na aba <em>"Skills"</em>. Tenho
           mais facilidade em Back-End para desenvolvimento WEB ou Android, em Front-End para desenvolvimento de
@@ -161,8 +161,8 @@
       </div>
 
       <!-- Content -->
-      <div class="col-sm-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-5">
-        <p>Atuar como Back-End em desenvolvimento de sistemas voltados para <strong>WEB</strong> ou
+      <div class="col-sm-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4">
+        <p>Atuar em desenvolvimento de sistemas voltados para <strong>WEB</strong> ou
           <strong>Android</strong>.
           Aprimorar minhas habilidades e ganhar experiência profissional.</p>
       </div>
@@ -189,7 +189,7 @@
       </div>
 
       <!-- Content -->
-      <div class="col-sm-12 col-md-5 mx-auto bg-site pt-1 pb-5 px-5">
+      <div class="col-sm-12 col-md-5 mx-auto bg-site pt-1 pb-5 px-2">
         <ul>
           <li>
             Conhecimento em <strong>JAVA</strong>
@@ -234,22 +234,22 @@
       </div>
 
       <!-- Content -->
-      <div class="col-sm-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-5">
-        <h3>Desenvolvo Sites Informativos ou de Auto Divulgação </h3>
+      <div class="col-sm-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4">
+        <h3>Desenvolvo Sites Informativos <br> ou de Auto Divulgação </h3>
         <br>
         <h4>Entre em contato comigo :</h4>
 
-        <div id="contactIcon" class="row col-7 col-sm-4 mx-auto py-3">
+        <div id="contactIcon" class="row col-7 col-sm-4 mx-auto pb-3 pt-5">
 
-          <a href="https://www.instagram.com/messias_lsn/" class="text-decoration-none mx-auto" target="_blank"><i
+          <a href="https://www.instagram.com/messias_lsn/" class="text-decoration-none mx-auto" ><i
               class="fab fa-instagram text-success"></i></a>
           <a href="#contact" class="text-decoration-none mx-auto scroll"><i
               class="far fa-envelope text-success"></i></a>
 
         </div>
 
-        <div class="col-12 pt-5">
-          <a class="card-link text-success float-sm-center float-md-right" href="sites.html" target="_blank">Saber Mais</a>
+        <div class="col-12 pt-3">
+          <a class="card-link text-success float-center" href="sites.html">Saiba Mais</a>
         </div>
 
 
