--- a/sites.html
+++ b/sites.html
@@ -70,7 +70,7 @@
             </div>
         </nav>
         <nav class="d-sm-none navbar navbar-expand-lg navbar-dark ">
-                <a class="text-secondary nav-item nav-link" href="./index.html"><i class="fas fa-arrow-left"></i></a>
+            <a class="text-secondary nav-item nav-link" href="./index.html"><i class="fas fa-arrow-left"></i></a>
         </nav>
     </div>
 
@@ -94,7 +94,7 @@
                 </ul>
                 <h4 class="text-center my-4"><strong>Não</strong> Desenvolvo :</h4>
                 <ul>
-                    <li>E-Comerce.</li>
+                    <li>E-Commerce.</li>
                     <li>Sistemas para cadastro/login.</li>
                     <li>Blog.</li>
                 </ul>
@@ -102,7 +102,7 @@
 
             <!-- SVG -->
             <div class="row neon-site  py-5">
-                <a href="#interests" class="text-decoration-none mx-auto scroll"><i
+                <a href="#prices" class="text-decoration-none mx-auto scroll"><i
                         class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
                     <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
             </div>
@@ -149,14 +149,15 @@
                                 <li>Domínio</li>
                             </ul>
                             </p>
-                            <a class="card-link text-success float-right href=" index.html/#contact">Adquirir</a>
+                            <a class="card-link text-success float-right "
+                                href="mailto:messias.lsn@gmail.com?subject=Adquirir%20Um%20Site&body=Ol%C3%A1%2C%20estou%20entrando%20em%20contato%20pois%20desejo%20adquirir%20um%20Site%20Padr%C3%A3o.">Adquirir</a>
                         </div>
 
                     </div>
 
                 </div>
 
-                <div class="col-sm-12 col-xl-3 mb-5">
+                <div class=" col-sm-12 col-xl-3 mb-5">
 
                     <div class="card bg-card-site my-3">
 
@@ -165,13 +166,15 @@
                         <div class="card-body">
                             <h5 class="card-title">Páginas Adicionais</h5>
                             <h6 class="text-muted card-subtitle mb-2">R$ 20,00</h6>
-                            <p class="card-text">O valor cobrado para <strong>cada</strong> páginal adicional (fora a
+                            <p class="card-text">O valor cobrado para <strong>cada</strong> páginal
+                                adicional (fora a
                                 página principal) é de <strong>R$ 20,00</strong> !
                                 <br>
-                                Páginas adicionais contém os mesmos benefícios da página inicial e são
+                                Páginas adicionais contém os mesmos benefícios da página principal e são
                                 <strong>opicionais</strong>.
                             </p>
-                            <a class="card-link text-success float-right" href="indigenas.html">Adquirir</a>
+                            <a class="card-link text-success float-right"
+                                href="mailto:messias.lsn@gmail.com?subject=Adquirir%20Um%20Site&body=Ol%C3%A1%2C%20estou%20entrando%20em%20contato%20pois%20desejo%20adquirir%20um%20Site%20Padr%C3%A3o%20com%20P%C3%A1ginas%20Adicionais.">Adquirir</a>
                         </div>
 
                     </div>
@@ -182,17 +185,20 @@
 
                     <div class="card bg-card-site my-3">
 
-                        <img class="card-img-top" src="images/website_example_2.png" alt="website_example_2">
+                        <img class="card-img-top" src="images/website-example_3.png" alt="website_example_3">
 
                         <div class="card-body">
-                            <h5 class="card-title">Domínio Internacional</h5>
+                            <h5 class="card-title">Domínio Nacional</h5>
                             <h6 class="text-muted card-subtitle mb-2">R$ 40,00</h6>
-                            <p class="card-text">O custo para que seu site tenha um domínio internacional com terminação
+                            <p class="card-text">O custo para que seu site tenha um domínio Nacional com
+                                terminação
                                 <strong>".com.br"</strong> é de <strong>R$ 40,00 anuais</strong> !
                                 <br>
-                                Este custo é totalmente dedicado ao registro do domínio e é <strong>opicinoal</strong>.
+                                Este custo é totalmente dedicado ao registro do domínio e é
+                                <strong>opicinoal</strong>.
                             </p>
-                            <a class="card-link text-success float-right" href="indigenas.html">Adquirir</a>
+                            <a class="card-link text-success float-right"
+                                href="mailto:messias.lsn@gmail.com?subject=Adquirir%20Um%20Site&body=Ol%C3%A1%2C%20estou%20entrando%20em%20contato%20pois%20desejo%20adquirir%20um%20Site%20Padr%C3%A3o%20com%20P%C3%A1ginas%20Adicionais%20e%20Dom%C3%ADnio%20Nacional.">Adquirir</a>
                         </div>
 
                     </div>
@@ -203,12 +209,12 @@
 
         </div>
 
-        <!-- SVG -->
-        <div class="d-none row neon-site  py-5">
-            <a href="#interests" class="text-decoration-none mx-auto scroll"><i
-                    class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
-                <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
-        </div>
+         <!-- SVG -->
+      <div class="d-none row neon-site  py-5">
+        <a href="#importance" class="text-decoration-none mx-auto scroll"><i
+            class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
+          <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
+      </div>
 
         </div>
 
@@ -236,19 +242,20 @@
             </div>
 
             <!-- SVG -->
-            <div class="d-none row neon-site  py-5">
-                <a href="#interests" class="text-decoration-none mx-auto scroll"><i
-                        class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
-                    <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
-            </div>
+      <div class="row neon-site  py-5">
+        <a href="#experience" class="text-decoration-none mx-auto scroll"><i
+            class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
+          <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
+      </div>
 
         </div>
 
     </section>
 
-    <!-- Experience -->
-    <section id="importance" class="my-5">
+    <!-- Experience and Footer -->
+    <section id="experience" class="my-5">
 
+        <!-- Experience -->
         <div class="container col-12">
 
             <!-- Title -->
@@ -257,22 +264,45 @@
             </div>
 
             <!-- Content -->
-            <div class="col-sm-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4   ">
+            <div class="col-sm-12 col-md-5 mx-auto bg-site pt-2 pb-5">
 
-                <!-- Fazer 4 separações com 1 com eblema do FNN-->
-               <div>
+                <div class="row">
 
-               </div>
+                    <div class="col-sm-12 col-md-6">
+                        <a class="" href="https://fnn-ong.github.io"><img src="images/fnn_logo.png" alt="fnn_logo"></a>
+                    </div>
+
+
+                </div>
+
             </div>
 
             <!-- SVG -->
-            <div class="d-none row neon-site  py-5">
-                <a href="#interests" class="text-decoration-none mx-auto scroll"><i
-                        class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
-                    <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
+            <div class="row neon-site  py-5">
+                <a href="#informations" class="text-decoration-none mx-auto scroll"><i
+                        class="d-none d-md-block fa-3x fas fa-arrow-circle-up text-site"></i>
+                    <i class="d-sm-none fa-2x fas fa-arrow-circle-up text-site"></i></a>
             </div>
 
+
         </div>
+
+        <!-- Footer-->
+        <footer>
+
+            <div class="my-5">
+                <div class="row bg-site col-4 col-sm-1 mx-auto py-2">
+
+                    <a href="https://www.linkedin.com/in/messias-nunesmaia/" class="mx-auto" target="blank"><i
+                            class="fab fa-linkedin-in"></i></a>
+
+                    <a href="https://github.com/Messias-Dev" class="mx-auto" target="blank"> <i
+                            class="fab fa-github "></i></a>
+
+                </div>
+            </div>
+
+        </footer>
 
     </section>
 
