Atualização de desrição

--- a/sites.html
+++ b/sites.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Estudante de Engenharia de Software">
+    <meta name="description" content="Venha adquirir o seu site">
     <meta name="author" content="Messias Nunesmaia">
     <meta content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:5" name="robots" />
     <LINK href="https://www.messias.gq/" rel="canonical">
