Atualização de ip

--- a/index.html
+++ b/index.html
@@ -189,27 +189,52 @@
       </div>
 
       <!-- Content -->
-      <div class="col-sm-12 col-md-5 mx-auto bg-site pt-1 pb-5 px-2">
-        <ul>
-          <li>
-            Conhecimento em <strong>JAVA</strong>
+      <div class="col-sm-12 col-md-5 mx-auto bg-site pt-3 pb-5 px-2">
+
+        <ol>
+
+          <li>Linguagens
+
+            <ul>
+
+              <li>
+                Experiência acadêmica em <strong>JAVA</strong>
+              </li>
+              <li>
+                Experiência acadêmica em <strong>SQL</strong>
+              </li>
+              <li>
+                Experiência acadêmica em <strong>HTML</strong> e <strong>CSS</strong>
+              </li>
+
+            </ul>
+
           </li>
-          <li>
-            Conhecimento em Desenvolvimento <strong>WEB</strong>
+
+        </ol>
+
+        <ol>
+
+          <li>Tecnologias
+
+            <ul>
+
+              <li>
+                Experiência acadêmica em <strong>Desenvolvimento WEB</strong>
+              </li>
+              <li>
+                Experiência acadêmica em <strong>SPRING</strong>
+              </li>
+              <li>
+                Experiência em repositórios Virtuais : <strong>GitHub</strong>
+              </li>
+
+            </ul>
+
           </li>
-          <li>
-            Conhecimento em <strong>Spring</strong>
-          </li>
-          <li>
-            Conhecimento em <strong>JSP</strong>, <strong>HTML</strong> e <strong>CSS</strong>
-          </li>
-          <li>
-            Conhecimento em <strong>GIT</strong>
-          </li>
-          <li>
-            Conhecimento em <strong>Orientação a Objeto</strong>
-          </li>
-        </ul>
+
+        </ol>
+         
       </div>
 
       <!-- SVG -->
@@ -237,7 +262,7 @@
       <div class="col-sm-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4">
         <h3>Desenvolvo Sites Informativos <br> ou de Auto Divulgação </h3>
         <br>
-        <h4>Entre em contato comigo :</h4>
+        <h4>Entre em contato :</h4>
 
         <div id="contactIcon" class="row col-7 col-sm-4 mx-auto pb-3 pt-5">
 
@@ -289,7 +314,7 @@
 
 
             <script>
-              document.getElementById("Ip").value = userip;
+              document.getElementById("user-ip").value = userip;
             </script>
 
             <label for="full-name">Nome</label>
@@ -447,10 +472,10 @@
       <div class="my-5">
         <div class="row bg-site col-4 col-sm-1 mx-auto py-2">
 
-          <a href="https://www.linkedin.com/in/messias-nunesmaia/" class="mx-auto" target="blank"><i
+          <a href="https://www.linkedin.com/in/messias-nunesmaia/" class="mx-auto"><i
               class="fab fa-linkedin-in"></i></a>
 
-          <a href="https://github.com/Messias-Dev" class="mx-auto" target="blank"> <i class="fab fa-github "></i></a>
+          <a href="https://github.com/Messias-Dev" class="mx-auto"> <i class="fab fa-github "></i></a>
 
         </div>
       </div>
