--- a/sites.html
+++ b/sites.html
@@ -293,10 +293,10 @@
             <div class="my-5">
                 <div class="row bg-site col-4 col-sm-1 mx-auto py-2">
 
-                    <a href="https://www.linkedin.com/in/messias-nunesmaia/" class="mx-auto" target="blank"><i
+                    <a href="https://www.linkedin.com/in/messias-nunesmaia/" class="mx-auto"><i
                             class="fab fa-linkedin-in"></i></a>
 
-                    <a href="https://github.com/Messias-Dev" class="mx-auto" target="blank"> <i
+                    <a href="https://github.com/Messias-Dev" class="mx-auto"> <i
                             class="fab fa-github "></i></a>
 
                 </div>
