Implementação de firebase

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
               placeholder="Ex: Atuo na área de direito e quero um site pessoal para auto divulgação e possíveis contatos de casos "
               required="true"></textarea>
           </fieldset>
-          <input type="submit" value="Enviar">
+          <input id="enviar-formulario" type="submit" value="Enviar">
 
         </form>
 
@@ -483,6 +483,18 @@
     </footer>
 
   </section>
+
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-database.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+   https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-analytics.js"></script>
+
+  <script src="js/firebase.js"></script>
+  <script src="js/real-time-database.js"></script>
 
 
 </body>
