Atualização de espaçamento

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="description" content="Estudante de Engenharia de Software">
   <meta name="author" content="Messias Nunesmaia">
   <meta content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:5" name="robots" />
-  <LINK href="https://www.messias.gq/" rel="canonical"></LINK>
+  <LINK href="https://www.messias.gq/" rel="canonical">
+  </LINK>
   <link href="https://www.messias.gq/" rel="amphtml" />
   <link rel="shortcut icon" href="images/user_icon.svg">
 
@@ -26,14 +27,14 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175891785-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175891785-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'UA-175891785-1');
-</script>
+    gtag('config', 'UA-175891785-1');
+  </script>
 
   <!-- Script Roll -->
   <script>
@@ -193,7 +194,7 @@
 
         <ol>
 
-          <li>Linguagens
+          <li><strong>Linguagens</strong> 
 
             <ul>
 
@@ -211,11 +212,7 @@
 
           </li>
 
-        </ol>
-
-        <ol>
-
-          <li>Tecnologias
+          <li class="mt-3"><strong>Tecnologias</strong>
 
             <ul>
 
@@ -234,7 +231,7 @@
           </li>
 
         </ol>
-         
+
       </div>
 
       <!-- SVG -->
@@ -266,7 +263,7 @@
 
         <div id="contactIcon" class="row col-7 col-sm-4 mx-auto pb-3 pt-5">
 
-          <a href="https://www.instagram.com/messias_lsn/" class="text-decoration-none mx-auto" ><i
+          <a href="https://www.instagram.com/messias_lsn/" class="text-decoration-none mx-auto"><i
               class="fab fa-instagram text-success"></i></a>
           <a href="#contact" class="text-decoration-none mx-auto scroll"><i
               class="far fa-envelope text-success"></i></a>
