Atualização de informações

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         </div>
 
         <div class="col-12 pt-3">
-          <a class="card-link text-success float-center" href="sites.html">Saiba Mais</a>
+          <a class="btn btn-success float-center" href="sites.html">Saiba Mais</a>
         </div>
 
 
