--- a/sites.html
+++ b/sites.html
@@ -75,7 +75,7 @@
     </div>
 
     <!-- Informations -->
-    <section id="informations" class="my-5">
+    <section id="informations" class="mb-5">
 
         <div class="container col-12">
 
@@ -88,15 +88,17 @@
             <div class="col-sm-12 col-md-5 mx-auto bg-site pt-2 pb-5 px-2">
                 <h4 class="text-center mt-2 mb-4">Desenvolvo :</h4>
                 <ul>
-                    <li>Sites <strong>informativos</strong> ou para <strong>divulgações</strong>.</li>
-                    <li>Portais com assuntos diversos.</li>
+                    <li>Site <strong>informativo</strong>.</li>
+                    <li>Site para <strong>divulgação</strong>.</li>
+                    <li>Página <strong>pessoal</strong>.</li>
+                    <li>Portal.</li>
+                    <li>Blog.</li>
+                    <li>Sistemas para cadastro/login.</li>
                     <li>Formulários <strong>automáticos</strong>.</li>
                 </ul>
                 <h4 class="text-center my-4"><strong>Não</strong> Desenvolvo :</h4>
                 <ul>
                     <li>E-Commerce.</li>
-                    <li>Sistemas para cadastro/login.</li>
-                    <li>Blog.</li>
                 </ul>
             </div>
 
@@ -114,7 +116,7 @@
     <!-- Prices -->
     <section id="prices" class="my-5 ">
 
-        <div class="container col-12">
+        <div class="container col-12 mb-auto">
 
             <!-- Title -->
             <div class="col-12 text-center pt-5 pb-4">
@@ -126,14 +128,14 @@
             <!-- Cards -->
             <div class="row">
 
-                <div class="col-sm-12 col-xl-3 ml-auto mb-5">
+                <div class="col-sm-12 col-xl-3 ml-auto mb-5 ">
 
                     <div class="card bg-card-site my-3">
 
-                        <img class="card-img-top" src="images/website_example.jpg" alt="website_example">
+                        <img class="card-img-top" src="images/website_example_8.svg" alt="website_example_8">
 
                         <div class="card-body">
-                            <h5 class="card-title">Site Padrão</h5>
+                            <h5 class="card-title">Site Simples</h5>
                             <h6 class="text-muted card-substitle mb-2">R$ 300,00</h6>
                             <p class="card-text">
                             <ul>
@@ -148,20 +150,83 @@
                                 <li>Hospedagem</li>
                                 <li>Domínio</li>
                             </ul>
+                            <br>
+                            (Recomendado para Página Pessoal)
+                            <br>
                             </p>
                             <a class="card-link text-success float-right "
-                                href="mailto:messias.lsn@gmail.com?subject=Adquirir%20Um%20Site&body=Ol%C3%A1%2C%20estou%20entrando%20em%20contato%20pois%20desejo%20adquirir%20um%20Site%20Padr%C3%A3o.">Adquirir</a>
+                                href="mailto:messias.lsn@gmail.com?subject=Adquirir%20um%20Site&body=Estou%20entrando%20em%20contato%20pois%20desejo%20adquirir%20um%20Site%20Simples.">Adquirir</a>
                         </div>
 
                     </div>
 
                 </div>
 
-                <div class=" col-sm-12 col-xl-3 mb-5">
+                <div class="col-sm-12 col-xl-3 mb-5 ">
 
                     <div class="card bg-card-site my-3">
 
                         <img class="card-img-top" src="images/website_example_2.png" alt="website_example_2">
+
+                        <div class="card-body">
+                            <h5 class="card-title">Site Padrão</h5>
+                            <h6 class="text-muted card-substitle mb-2">R$ 550,00</h6>
+                            <p class="card-text">
+                            <ul>
+                                <li>Site Simples</li>
+                                <li>Plataforma para <strong>Criação/Atualização</strong> de posts próprios</li>
+                                <li>Banco de dados <strong>seguro</strong></li>
+                                <li>Integração com o <strong>Google Analytics</strong></li>
+                            </ul>
+                            <br>
+                            (Recomendado para Blog/Portal)
+                            <br>
+                            </p>
+                            <a class="card-link text-success float-right "
+                                href="mailto:messias.lsn@gmail.com?subject=Adquirir%20um%20Site&body=Estou%20entrando%20em%20contato%20pois%20desejo%20adquirir%20um%20Site%20Padr%C3%A3o.">Adquirir</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="col-sm-12 col-xl-3 mr-auto mb-5 ">
+
+                    <div class="card bg-card-site my-3">
+
+                        <img class="card-img-top" src="images/website_example_6.svg" alt="website_example_6">
+
+                        <div class="card-body">
+                            <h5 class="card-title">Site Completo</h5>
+                            <h6 class="text-muted card-substitle mb-2">R$ 1.000,00</h6>
+                            <p class="card-text">
+                            <ul>
+                                <li>Site Padrão</li>
+                                <li>Criação de contas para<strong>usuários</strong></li>
+                                <li>Confirmação de cadastro <strong>via e-mail</strong></li>
+                                <li>Autenticação <strong>segura</strong></li>
+                                <li>Sistema <strong>contra fraude</strong> de contas múltiplas</li>
+                            </ul>
+                            <br>
+                            (Recomendado para Site Complexo)
+                            <br>
+                            </p>
+                            <a class="card-link text-success float-right "
+                                href="mailto:messias.lsn@gmail.com?subject=Adquirir%20um%20Site&body=Estou%20entrando%20em%20contato%20pois%20desejo%20adquirir%20um%20Site%20Complexo.">Adquirir</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="row">
+
+                <div class=" col-sm-12 col-xl-3 ml-auto mb-5">
+
+                    <div class="card bg-card-site my-3">
+
+                        <img class="card-img-top" src="images/website_example.jpg" alt="website_example">
 
                         <div class="card-body">
                             <h5 class="card-title">Páginas Adicionais</h5>
@@ -173,8 +238,6 @@
                                 Páginas adicionais contém os mesmos benefícios da página principal e são
                                 <strong>opicionais</strong>.
                             </p>
-                            <a class="card-link text-success float-right"
-                                href="mailto:messias.lsn@gmail.com?subject=Adquirir%20Um%20Site&body=Ol%C3%A1%2C%20estou%20entrando%20em%20contato%20pois%20desejo%20adquirir%20um%20Site%20Padr%C3%A3o%20com%20P%C3%A1ginas%20Adicionais.">Adquirir</a>
                         </div>
 
                     </div>
@@ -185,7 +248,7 @@
 
                     <div class="card bg-card-site my-3">
 
-                        <img class="card-img-top" src="images/website-example_3.png" alt="website_example_3">
+                        <img class="card-img-top" src="images/website_example_7.svg" alt="website_example_7">
 
                         <div class="card-body">
                             <h5 class="card-title">Domínio Nacional</h5>
@@ -197,8 +260,6 @@
                                 Este custo é totalmente dedicado ao registro do domínio e é
                                 <strong>opicinoal</strong>.
                             </p>
-                            <a class="card-link text-success float-right"
-                                href="mailto:messias.lsn@gmail.com?subject=Adquirir%20Um%20Site&body=Ol%C3%A1%2C%20estou%20entrando%20em%20contato%20pois%20desejo%20adquirir%20um%20Site%20Padr%C3%A3o%20com%20P%C3%A1ginas%20Adicionais%20e%20Dom%C3%ADnio%20Nacional.">Adquirir</a>
                         </div>
 
                     </div>
@@ -209,12 +270,12 @@
 
         </div>
 
-         <!-- SVG -->
-      <div class="d-none row neon-site  py-5">
-        <a href="#importance" class="text-decoration-none mx-auto scroll"><i
-            class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
-          <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
-      </div>
+        <!-- SVG -->
+        <div class="d-none row neon-site  py-5">
+            <a href="#importance" class="text-decoration-none mx-auto scroll"><i
+                    class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
+                <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
+        </div>
 
         </div>
 
@@ -242,11 +303,11 @@
             </div>
 
             <!-- SVG -->
-      <div class="row neon-site  py-5">
-        <a href="#experience" class="text-decoration-none mx-auto scroll"><i
-            class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
-          <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
-      </div>
+            <div class="row neon-site  py-5">
+                <a href="#experience" class="text-decoration-none mx-auto scroll"><i
+                        class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
+                    <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
+            </div>
 
         </div>
 
@@ -296,8 +357,7 @@
                     <a href="https://www.linkedin.com/in/messias-nunesmaia/" class="mx-auto"><i
                             class="fab fa-linkedin-in"></i></a>
 
-                    <a href="https://github.com/Messias-Dev" class="mx-auto"> <i
-                            class="fab fa-github "></i></a>
+                    <a href="https://github.com/Messias-Dev" class="mx-auto"> <i class="fab fa-github "></i></a>
 
                 </div>
             </div>
